force-app/main/default/objects/Junction__c/Junction__c.object-meta.xml
<CustomObject>
    <label>Junction</label>
    <nameField>
        <label>Junction Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Junctions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>