force-app/main/default/objects/Junction__c/fields/num__c.field-meta.xml
<CustomField>
    <fullName>num__c</fullName>
    <label>num</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>