force-app/main/default/objects/Junction__c/fields/position_candidate_association__c.field-meta.xml
<CustomField>
    <fullName>position_candidate_association__c</fullName>
    <label>Candidate</label>
    <referenceTo>Candidate__c</referenceTo>
    <relationshipLabel>Junctions</relationshipLabel>
    <relationshipName>Junctions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>