force-app/main/default/objects/Junction__c/fields/position_candidateassociation__c.field-meta.xml
<CustomField>
    <fullName>position_candidateassociation__c</fullName>
    <label>Position</label>
    <referenceTo>Positions__c</referenceTo>
    <relationshipLabel>Junctions</relationshipLabel>
    <relationshipName>Junctions</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>